fianl without hosting

--- a/src/App.css
+++ b/src/App.css
@@ -8,17 +8,11 @@
 .main_container {
   width: 400px !important;
   height: auto;
-  background-color: #d9d9d9;
-  background-image: linear-gradient(315deg, #d9d9d9 0%, #f6f2f2 74%);
   box-shadow: 0 0 10px #008080;
   margin-top: 30px;
   padding: 10px 50px;
 }
-.header {
-  text-align: center;
-  margin: 10px, 0;
-  color: #008080;
-}
+
 .expence_income {
   display: flex;
   justify-content: space-around;
@@ -26,59 +20,51 @@
   background-color: white;
   box-shadow: 0 0 10px gray;
   height: 100px;
+  border-radius: 5px;
 }
 h1 {
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   margin: 0;
+  font-family: "Roboto Slab", serif;
+  color: #008080;
   text-align: center;
+  padding: 10px;
 }
 
 h2 {
   letter-spacing: 1px;
-  margin: 0;
+  margin: 15px 10px;
   text-align: center;
+  font-family: "Roboto Slab", serif;
+  font-weight: bold;
 }
 
-h3 {
-  border-bottom: 1px solid #bbb;
-  padding-bottom: 10px;
-  margin: 40px 0 10px;
-  text-align: center;
-}
-
-h4 {
-  margin: 0;
-  text-transform: uppercase;
-  text-align: center;
-}
-.form_container input {
-  width: 100%;
-  padding: 10px;
-  margin: 10px, 10px;
-}
 .form_container {
-  padding: 10px;
-  margin: 10px, 10px;
+  padding: 10px !important;
+  margin: 20px, 10px, 10px !important;
 }
 .btn {
   cursor: pointer;
   background-color: #008080;
-  box-shadow: var(--box-shadow);
+  box-shadow: 0 0 10px gray;
+  border-radius: 5px;
+  width: 100%;
   color: #fff;
   border: 0;
   display: block;
   font-size: 16px;
   margin: 10px 0 30px;
-  padding: 10px;
+  padding: 15px;
   font-weight: bold;
 }
 .money {
   font-size: 20px;
   letter-spacing: 1px;
   margin: 5px 0;
+  border-radius: 5px;
 }
 .money.plus {
-  color: #b6960a;
+  color: #d6b317;
   font-weight: bold;
 }
 
@@ -95,31 +81,55 @@ h4 {
 
 .list li {
   background-color: #fff;
-  box-shadow: var(--box-shadow);
-  color: #333;
+  box-shadow: 0 0 10px gray;
+  color: #333333;
   display: flex;
   justify-content: space-between;
-  position: relative;
   padding: 10px;
   margin: 10px 0;
+  font-family: "Lucida Sans";
+  font-weight: bold;
+  border-radius: 5px;
+  font-size: 18px;
+  position: relative;
+  text-transform: capitalize;
 }
 
-.list li.plus {
+.positive {
   border-right: 5px solid #b6960a;
 }
-
-.list li.plus:hover {
+.list li.positive:hover {
   border-right: 5px solid #b6960a;
   background-color: #b6960a;
   color: #f7f7f7;
 }
 
-.list li.minus {
+.negative {
   border-right: 5px solid #2da3ad;
 }
 
-.list li.minus:hover {
+.negative:hover {
   border-right: 5px solid #2da3ad;
   background-color: #2da3ad;
   color: #f7f7f7;
+}
+
+.del-btn {
+  cursor: pointer;
+  background-color: #8a6a66;
+  border: 0;
+  color: #fff;
+  font-size: 20px;
+  line-height: 20px;
+  padding: 2px 5px;
+  /* position: absolute; */
+  top: 50%;
+  left: 0;
+  transform: translate(-100%, -50%);
+  opacity: 2;
+  transition: opacity 0.3s ease;
+}
+
+.list li:hover .del-btn {
+  opacity: 1;
 }
